--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ aws = [
 azure = [
     "azure-identity ~= 1.9.0",
     "azure-mgmt-compute ~= 26.1.0",
+    "azure-mgmt-keyvault ~= 10.2.3",
     "azure-mgmt-marketplaceordering ~= 1.1.0",
     "azure-mgmt-network ~= 19.3.0",
     "azure-mgmt-privatedns ~= 1.0.0",
@@ -49,6 +50,8 @@ azure = [
     "azure-mgmt-storage ~= 20.0.0",
     "azure-storage-blob ~= 12.11.0",
     "azure-storage-file-share ~= 12.4.0",
+    "azure-keyvault-secrets ~= 4.7.0", 
+    "azure-keyvault-certificates ~= 4.7.0",
     "msrestazure ~= 0.6.4",
     "cachetools ~= 5.2.0",
     "requests",
