--- a/microsoft/runbook/tiers/tdebug.yml
+++ b/microsoft/runbook/tiers/tdebug.yml
@@ -15,3 +15,4 @@ testcase:
     retry: $(retry)
     use_new_environment: $(use_new_environment)
     ignore_failure: $(ignore_failure)
+    enabled: $(enable_tests)
