--- a/microsoft/runbook/tiers/tier.yml
+++ b/microsoft/runbook/tiers/tier.yml
@@ -2,6 +2,7 @@ include:
   - path: ./t$(tier).yml
 extension:
   - ../../testsuites
+  - ../../../../extensions
 variable:
   - name: tier
     value: 0
