--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "assertpy ~= 1.1",
     "func-timeout ~= 4.3.5",
     "dataclasses-json ~= 0.5.2",
-    "paramiko ~= 3.4.0",
+    "paramiko ~= 2.12.0",
     "pluggy ~= 0.13.1",
     "python-dateutil ~= 2.8.1",
     "pytest-html ~= 3.2.0",
@@ -114,7 +114,7 @@ test = [
 
 typing = [
     "types-retry ~= 0.1.3",
-    "types-paramiko ~= 3.4.0.20240103",
+    "types-paramiko ~= 0.1.7",
     "types-requests ~= 2.25.0",
     "types-python-dateutil ~= 0.1.4",
     "types-PyYAML ~= 5.4.3",
